--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,14 +23,15 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_9
+        targetCompatibility JavaVersion.VERSION_1_9
     }
 }
 
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation("com.squareup.okhttp3:okhttp:4.10.0")
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
