--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SortIt"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:largeHeap="true"
+
+        >
 
         <activity
             android:name=".MainActivity"
